<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:context=".AddEditActivity">

        <!-- Heading Title -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_edit_employee_profile"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Employee ID -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmployeeId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/employee_id"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmployeeId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/name"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutEmployeeId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- NID/Passport -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutNidOrPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/nid_passport_number"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNidOrPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date of Birth -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutDob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/date_of_birth_yyyy_mm_dd"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutNidOrPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Gender -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutGender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="Gender"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutDob"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/inputLayoutMaritalStatus"
            android:layout_marginEnd="8dp">

            <AutoCompleteTextView
                android:id="@+id/editTextGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="textCapWords"
                tools:text="Male"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Marital Status -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutMaritalStatus"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="Marital Status"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutDob"
            app:layout_constraintStart_toEndOf="@+id/inputLayoutGender"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp">

            <AutoCompleteTextView
                android:id="@+id/editTextMaritalStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="textCapWords"
                tools:text="Single"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutGender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/phone_number"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Address -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/full_address"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:minLines="3"
                android:gravity="top"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Department -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutDepartment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/department"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Position -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPosition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/position_designation"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutDepartment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Salary -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutSalary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/salary_bdt"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutPosition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Save Button -->
        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/save_employee"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutSalary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
